tablename und figurename angepasst

--- a/Analyses/columns.tex
+++ b/Analyses/columns.tex
@@ -6,10 +6,9 @@
 
 %Auf deutsche Captions einstellen:
 \usepackage{caption}
-\captionsetup[figure]{name=Abbildung}
-\captionsetup[table]{name=Tabelle}
 
-\usepackage[singlelinecheck=off]{caption}
+\captionsetup{figurename=Abb., tablename=Tabelle}
+%\usepackage[singlelinecheck=off]{caption}
 
 
 % Spalten ermoeglichen:
